[design] design ProfilePage

--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" id="html">
+<html lang="en" id="html" style="font-size: 14px">
   <head>
     <base href="/" />
     <meta charset="utf-8" />
